--- a/internal/core/unittest/CMakeLists.txt
+++ b/internal/core/unittest/CMakeLists.txt
@@ -70,6 +70,7 @@ set(MILVUS_TEST_FILES
         test_futures.cpp
         test_array_inverted_index.cpp
         test_chunk_vector.cpp
+        test_mmap_chunk_manager.cpp
         )
 
 if ( INDEX_ENGINE STREQUAL "cardinal" )
