enhance: Add nilness linter and fix some small issues
Add `nilness` for govet linter and fixed some detected issues

Signed-off-by: Congqi Xia <congqi.xia@zilliz.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -41,6 +41,9 @@ linters-settings:
       - default
       - prefix(github.com/milvus-io)
     custom-order: true
+  govet:
+    enable: # add extra linters
+      - nilness 
   gofumpt:
     lang-version: "1.18"
     module-path: github.com/milvus-io
