fix: add build-tags at golangci-lint
Signed-off-by: chyezh <chyezh@outlook.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -10,6 +10,9 @@ run:
     - cmake_build
   skip-files:
     - partial_search_test.go
+  build-tags:
+    - dynamic
+    - test
 
 linters:
   disable-all: true
