enhance: wal adaptor implementation
- add adaptor to implement walimpls into wal interface.
- add test for wal.

Signed-off-by: chyezh <chyezh@outlook.com>

--- a/internal/streamingservice/.mockery.yaml
+++ b/internal/streamingservice/.mockery.yaml
@@ -11,3 +11,8 @@ packages:
       Opener:
       Scanner:
       WAL:
+  github.com/milvus-io/milvus/internal/streamingnode/server/wal/interceptors:
+    interfaces:
+      Interceptor:
+      InterceptorWithReady:
+      InterceptorBuilder:
