--- a/.golangci.yml
+++ b/.golangci.yml
@@ -13,6 +13,9 @@ run:
     - ci
   skip-files:
     - partial_search_test.go
+  build-tags:
+    - dynamic
+    - test
 
 linters:
   disable-all: true
