enhance:[skip e2e]update one pod mode resource
Signed-off-by: zhuwenxing <wenxing.zhu@zilliz.com>

--- a/tests/python_client/chaos/one-pod-standalone-values.yaml
+++ b/tests/python_client/chaos/one-pod-standalone-values.yaml
@@ -13,6 +13,13 @@ minio:
 pulsar:
   enabled: false
 standalone:
+  resources:
+    limits:
+      cpu: 8
+      memory: 32Gi
+    requests:
+      cpu: 4
+      memory: 8Gi  
   extraEnv:
   - name: ETCD_CONFIG_PATH
     value: /milvus/configs/advanced/etcd.yaml
