--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,95 +1,11 @@
 version: '3.5'
 
-x-ccache: &ccache
-  CCACHE_COMPILERCHECK: content
-  CCACHE_COMPRESS: 1
-  CCACHE_COMPRESSLEVEL: 5
-  CCACHE_MAXSIZE: 2G
-  CCACHE_DIR: /ccache
-
 services:
-  builder:
-    image: ${IMAGE_REPO}/milvus-env:${OS_NAME}-${DATE_VERSION}
-    # Build devcontainer
-    build:
-      context: .
-      dockerfile: build/docker/builder/cpu/${OS_NAME}/Dockerfile
-      args:
-        TARGETARCH: ${IMAGE_ARCH}
-      cache_from:
-        - ${IMAGE_REPO}/milvus-env:${OS_NAME}-${LATEST_DATE_VERSION}
-    platform: linux/${IMAGE_ARCH}
-    shm_size: 2G
-    # expose 19530 port so we can directly access milvus inside build container
-    # ports:
-    #  - "19530:19530"
-    environment:
-      <<: *ccache
-      OS_NAME: ${OS_NAME}
-      PULSAR_ADDRESS: ${PULSAR_ADDRESS}
-      ETCD_ENDPOINTS: ${ETCD_ENDPOINTS}
-      MINIO_ADDRESS: ${MINIO_ADDRESS}
-      CONAN_USER_HOME: /home/milvus
-      AZURE_STORAGE_CONNECTION_STRING: ${AZURITE_CONNECTION_STRING}
-    volumes: &builder-volumes
-      - .:/go/src/github.com/milvus-io/milvus:delegated
-      - ${DOCKER_VOLUME_DIRECTORY:-.docker}/${IMAGE_ARCH}-${OS_NAME}-ccache:/ccache:delegated
-      - ${DOCKER_VOLUME_DIRECTORY:-.docker}/${IMAGE_ARCH}-${OS_NAME}-go-mod:/go/pkg/mod:delegated
-      - ${DOCKER_VOLUME_DIRECTORY:-.docker}/${IMAGE_ARCH}-${OS_NAME}-vscode-extensions:/home/milvus/.vscode-server/extensions:delegated
-      - ${DOCKER_VOLUME_DIRECTORY:-.docker}/${IMAGE_ARCH}-${OS_NAME}-conan:/home/milvus/.conan:delegated
-    working_dir: '/go/src/github.com/milvus-io/milvus'
-    depends_on:
-      - etcd
-      - minio
-      - pulsar
-      - azurite
-    # Command
-    command: &builder-command >
-      /bin/bash -c "
-        make check-proto-product && make verifiers && make unittest"
-
-  gpubuilder:
-    image: ${IMAGE_REPO}/milvus-env:gpu-${OS_NAME}-${GPU_DATE_VERSION}
-    # Build devcontainer
-    build:
-      context: .
-      dockerfile: build/docker/builder/gpu/${OS_NAME}/Dockerfile
-      args:
-        TARGETARCH: ${IMAGE_ARCH}
-      cache_from:
-        - ${IMAGE_REPO}/milvus-env:gpu-${OS_NAME}-${LATEST_GPU_DATE_VERSION}
-    # user: {{ CURRENT_ID }}
-    shm_size: 2G
-    # expose 19530 port so we can directly access milvus inside build container
-    # ports:
-    #  - "19530:19530"
-    environment:
-      <<: *ccache
-      OS_NAME: ${OS_NAME}
-      PULSAR_ADDRESS: ${PULSAR_ADDRESS}
-      ETCD_ENDPOINTS: ${ETCD_ENDPOINTS}
-      MINIO_ADDRESS: ${MINIO_ADDRESS}
-      CONAN_USER_HOME: /home/milvus
-      AZURE_STORAGE_CONNECTION_STRING: ${AZURITE_CONNECTION_STRING}
-    volumes: &builder-volumes-gpu
-      - .:/go/src/github.com/milvus-io/milvus:delegated
-      - ${DOCKER_VOLUME_DIRECTORY:-.docker-gpu}/${OS_NAME}-ccache:/ccache:delegated
-      - ${DOCKER_VOLUME_DIRECTORY:-.docker-gpu}/${OS_NAME}-go-mod:/go/pkg/mod:delegated
-      - ${DOCKER_VOLUME_DIRECTORY:-.docker-gpu}/${OS_NAME}-vscode-extensions:/home/milvus/.vscode-server/extensions:delegated
-      - ${DOCKER_VOLUME_DIRECTORY:-.docker-gpu}/${OS_NAME}-conan:/home/milvus/.conan:delegated
-    working_dir: '/go/src/github.com/milvus-io/milvus'
-    depends_on:
-      - etcd
-      - minio
-      - pulsar
-      - azurite
-    # Command
-    command: &builder-command-gpu >
-      /bin/bash -c "
-        make check-proto-product && make verifiers && make unittest"
-
   etcd:
     image: milvusdb/etcd:3.5.5-r2
+    ports:
+      - "2379:2379"
+      - "2380:2380"
     environment:
       - ALLOW_NONE_AUTHENTICATION=yes
       - ETCD_AUTO_COMPACTION_MODE=revision
@@ -102,29 +18,26 @@ services:
       timeout: 20s
       retries: 3
 
-  pulsar:
-    image: apachepulsar/pulsar:2.8.2
-    command: bin/pulsar standalone --no-functions-worker --no-stream-storage
-
   minio:
     image: minio/minio:RELEASE.2023-03-20T20-16-18Z
+    ports:
+      - "9000:9000"
     environment:
       MINIO_ACCESS_KEY: minioadmin
       MINIO_SECRET_KEY: minioadmin
-    command: minio server /minio_data
+    command: minio server /data
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:9000/minio/health/live']
       interval: 30s
       timeout: 20s
       retries: 3
 
-  azurite:
-    image: mcr.microsoft.com/azure-storage/azurite
-    command: azurite-blob --blobHost 0.0.0.0
-
-  jaeger:
-    image: jaegertracing/all-in-one:latest
-
-networks:
-  default:
-    name: milvus_dev
+  milvus:
+    image: milvusdb/milvus:latest
+    ports:
+      - "19530:19530"
+    environment:
+      ETCD_ENDPOINTS: "etcd:2379"
+      MINIO_ADDRESS: "minio:9000"
+      MINIO_ACCESS_KEY: "minioadmin"
+      MINIO_SECRET_KEY: "minioadmin"
