Update ETCD Dockerfile with consistent cluster configuration

--- a/etcd/Dockerfile
+++ b/etcd/Dockerfile
@@ -5,4 +5,4 @@ FROM quay.io/coreos/etcd:v3.4.13
 EXPOSE 2379 2380
 
 # Start ETCD with the required configuration
-CMD ["etcd", "--listen-client-urls=http://0.0.0.0:2379", "--advertise-client-urls=http://0.0.0.0:2379", "--listen-peer-urls=http://0.0.0.0:2380", "--initial-advertise-peer-urls=http://0.0.0.0:2380"]
+CMD ["etcd", "--listen-client-urls=http://0.0.0.0:2379", "--advertise-client-urls=http://0.0.0.0:2379", "--listen-peer-urls=http://0.0.0.0:2380", "--initial-advertise-peer-urls=http://0.0.0.0:2380", "--initial-cluster", "default=http://0.0.0.0:2380"]
