--- a/milvus/Dockerfile
+++ b/milvus/Dockerfile
@@ -5,7 +5,7 @@ FROM milvusdb/milvus:latest
 EXPOSE 19530
 
 # Set environment variables
-ENV ETCD_ENDPOINTS=etcd:2379
+ENV ETCD_ENDPOINTS=https://etcd-service.onrender.com:2379
 ENV MINIO_ADDRESS=minio:9000
 ENV MINIO_ACCESS_KEY=minioadmin
 ENV MINIO_SECRET_KEY=minioadmin
