Added cURL to ETCD Dockerfile for diagnostics

--- a/etcd/Dockerfile
+++ b/etcd/Dockerfile
@@ -1,6 +1,9 @@
 # Use an appropriate base image
 FROM quay.io/coreos/etcd:v3.4.13
 
+# Install curl
+RUN apk add --no-cache curl
+
 # Expose the necessary ports
 EXPOSE 2379 2380
 
