--- a/etcd/Dockerfile
+++ b/etcd/Dockerfile
@@ -1,8 +1,8 @@
 # Use an appropriate base image
 FROM quay.io/coreos/etcd:v3.4.13
 
-# Install curl
-RUN apk add --no-cache curl
+# Install wget using apt-get
+RUN apt-get update && apt-get install -y wget
 
 # Expose the necessary ports
 EXPOSE 2379 2380
