enhance: disable azure storage when ut and e2e test
Signed-off-by: Liang Huang <sammy.huang@zilliz.com>

--- a/.github/workflows/mac.yaml
+++ b/.github/workflows/mac.yaml
@@ -86,7 +86,7 @@ jobs:
           if [[ ! -d "/usr/local/opt/llvm" ]]; then
             ln -s /usr/local/opt/llvm@14 /usr/local/opt/llvm
           fi
-          make milvus
+          make milvus ENABLE_AZURE=false
       - name: Upload Cmake log
         uses: actions/upload-artifact@v3
         if: ${{ failure() }}
