fix: add unittest for status package
Signed-off-by: chyezh <chyezh@outlook.com>

--- a/internal/streamingservice/.mockery.yaml
+++ b/internal/streamingservice/.mockery.yaml
@@ -16,3 +16,6 @@ packages:
       Interceptor:
       InterceptorWithReady:
       InterceptorBuilder:
+  google.golang.org/grpc:
+    interfaces:
+      ClientStream:
