enhance: [Cherry-pick] Merge query stream result for reduce delete task (#32855) (#34281)
relate: https://github.com/milvus-io/milvus/issues/32854
pr:  https://github.com/milvus-io/milvus/pull/32855

---------

Signed-off-by: aoiasd <zhicheng.yue@zilliz.com>

--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -386,6 +386,7 @@ queryNode:
       maxQueueLength: 16 # Maximum length of task queue in flowgraph
       maxParallelism: 1024 # Maximum number of tasks executed in parallel in the flowgraph
   enableSegmentPrune: false # use partition prune function on shard delegator
+  queryStreamBatchSize: 4194304 # return batch size of stream query
   ip:  # if not specified, use the first unicastable address
   port: 21123
   grpc:
