--- a/internal/.mockery.yaml
+++ b/internal/.mockery.yaml
@@ -11,6 +11,15 @@ packages:
   github.com/milvus-io/milvus/internal/streamingnode/client/manager:
     interfaces:
       ManagerClient:
+  github.com/milvus-io/milvus/internal/streamingnode/client/handler/assignment:
+    interfaces:
+      Watcher:
+  github.com/milvus-io/milvus/internal/streamingnode/client/handler/producer:
+    interfaces:
+      Producer:
+  github.com/milvus-io/milvus/internal/streamingnode/client/handler/consumer:
+    interfaces:
+      Consumer:
   github.com/milvus-io/milvus/internal/streamingnode/server/wal:
     interfaces:
       OpenerBuilder:
@@ -30,6 +39,10 @@ packages:
       StreamingNodeHandlerService_ConsumeServer:
       StreamingNodeHandlerService_ProduceServer:
       StreamingCoordAssignmentService_AssignmentDiscoverServer:
+      StreamingNodeManagerServiceClient:
+      StreamingNodeHandlerServiceClient:
+      StreamingNodeHandlerService_ConsumeClient:
+      StreamingNodeHandlerService_ProduceClient:
   github.com/milvus-io/milvus/internal/streamingnode/server/walmanager:
     interfaces:
       Manager:
@@ -40,9 +53,13 @@ packages:
     interfaces:
       Discoverer:
       AssignmentDiscoverWatcher:
+  github.com/milvus-io/milvus/internal/util/streamingutil/service/lazygrpc:
+    interfaces:
+      Service:
   github.com/milvus-io/milvus/internal/util/streamingutil/service/resolver:
     interfaces:
       Resolver:
+      Builder:
   google.golang.org/grpc/resolver:
     interfaces:
       ClientConn:
