--- a/internal/streamingservice/.mockery.yaml
+++ b/internal/streamingservice/.mockery.yaml
@@ -11,3 +11,11 @@ packages:
       Opener:
       Scanner:
       WAL:
+  github.com/milvus-io/milvus/internal/streamingnode/server/wal/interceptors:
+    interfaces:
+      Interceptor:
+      InterceptorWithReady:
+      InterceptorBuilder:
+  google.golang.org/grpc:
+    interfaces:
+      ClientStream:
