enhance: implement streaming coord client
Signed-off-by: chyezh <chyezh@outlook.com>

--- a/internal/.mockery.yaml
+++ b/internal/.mockery.yaml
@@ -38,6 +38,8 @@ packages:
     interfaces:
       StreamingNodeHandlerService_ConsumeServer:
       StreamingNodeHandlerService_ProduceServer:
+      StreamingCoordAssignmentServiceClient:
+      StreamingCoordAssignmentService_AssignmentDiscoverClient:
       StreamingCoordAssignmentService_AssignmentDiscoverServer:
       StreamingNodeManagerServiceClient:
       StreamingNodeHandlerServiceClient:
