enhance: Add lint rule to forbid gogo protobuf (#34594)
github.com/gogo/protobuf is deprecated and could be error prune after
upgrade protobuf message to v2.

Signed-off-by: Congqi Xia <congqi.xia@zilliz.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -118,6 +118,8 @@ linters-settings:
             desc: not allowed, use github.com/tikv/client-go/v2/txnkv
           - pkg: "github.com/tikv/client-go/v2/rawkv"
             desc: not allowed, use github.com/tikv/client-go/v2/txnkv
+          - pkg: "github.com/gogo/protobuf"
+            desc: "not allowed, gogo protobuf is deprecated"
   forbidigo:
     forbid:
       - '^time\.Tick$'
