enhance: Add param item for segmentFlushInterval
See also #28817

Add paramitem for segment flush interval

Signed-off-by: Congqi Xia <congqi.xia@zilliz.com>

--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -448,6 +448,7 @@ dataCoord:
     # MUST BE GREATER THAN OR EQUAL TO <smallProportion>!!!
     # During compaction, the size of segment # of rows is able to exceed segment max # of rows by (expansionRate-1) * 100%. 
     expansionRate: 1.25
+    segmentFlushInterval: 2 # the minimal interval duration(unit: Seconds) between flusing operation on same segment
   autoUpgradeSegmentIndex: false # whether auto upgrade segment index to index engine's version
   enableCompaction: true # Enable data segment compaction
   compaction:
