fix: [2.3] support set up knowhere-build-pool-size on querynode
Related: #29650

Co-authored-by: MrPresent-Han <chun.han@zilliz.com>
Signed-off-by: Congqi Xia <congqi.xia@zilliz.com>

--- a/configs/milvus.yaml
+++ b/configs/milvus.yaml
@@ -312,6 +312,7 @@ queryNode:
       nlist: 128 # segment index nlist
       nprobe: 16 # nprobe to search segment, based on your accuracy requirement, must smaller than nlist
       memExpansionRate: 1.15 # the ratio of building interim index memory usage to raw data
+      buildParallelRate: 0.5 # the ratio of building interim index parallel matched with cpu num
   loadMemoryUsageFactor: 1 # The multiply factor of calculating the memory usage while loading segments
   enableDisk: false # enable querynode load disk index, and search on disk index
   maxDiskUsagePercentage: 95
