fix: streaming service related fix batch
- fix binary unsafe bug for message
- fix service discovery lost when repeated address with different server
id

Signed-off-by: chyezh <chyezh@outlook.com>

--- a/pkg/.mockery_pkg.yaml
+++ b/pkg/.mockery_pkg.yaml
@@ -26,4 +26,6 @@ packages:
   github.com/milvus-io/milvus/pkg/streaming/util/types:
     interfaces:
       AssignmentDiscoverWatcher:
+      AssignmentRebalanceTrigger:
+
   
