--- a/internal/core/src/CMakeLists.txt
+++ b/internal/core/src/CMakeLists.txt
@@ -27,6 +27,7 @@ add_subdirectory( pb )
 add_subdirectory( log )
 add_subdirectory( config )
 add_subdirectory( common )
+add_subdirectory( monitor )
 add_subdirectory( storage )
 add_subdirectory( index )
 add_subdirectory( query )
